<resources>
    <string name="app_name">PayMent</string>
    <string name="list_of_items">List Of Items</string>
    <string name="action_settings">Settings</string>
    <string name="apple">Apple</string>
    <string name="mango">Mango</string>
    <string name="banana">Banana</string>
    <string name="check_out">CheckOut</string>
    <string name="list">List</string>
    <string name="check_out01">CheckOut</string>
    <string name="orange">Orange</string>
    <string name="jack_fruit">JackFruit</string>
    <string name="total_bill_in_taka">Total Bill In Taka</string>
    <string name="total_bill_in_dollar">Total_Bill_In_Dollar</string>
    <string name="call_to_order">CAll TO ORDER</string>
    <string name="sms_to_order">SMS TO ORDER</string>
    <string name="apple_120_taka">Apple - (120 Taka)</string>
    <string name="mango_220_taka">Mango - (220 Taka)</string>
    <string name="banana_20_taka">Banana - (20 Taka)</string>
</resources>
