<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Payment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_items"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="selectItem"
            android:text="@string/apple_120_taka"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="selectItem"
            android:text="@string/mango_220_taka"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="selectItem"
            android:text="@string/banana_20_taka"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="selectItem"
            android:text="Orange - (80 Taka) "
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/check5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="selectItem"
            android:text="JackFruit - (280 Taka)"
            android:textSize="20sp" />


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/check_out"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="finalSelection"
        />


</LinearLayout>