<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CheckOut">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/final_result01"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="@drawable/main"
        android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_bill_in_taka"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:gravity="center"
            />

    <TextView
        android:id="@+id/total_bill"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="@drawable/main"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_bill_in_dollar"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/total_bill1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="@drawable/main"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:id="@+id/show"
        android:text="@string/call_to_order"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="20sp"
        android:id="@+id/show1"
        android:text="@string/sms_to_order"
        />
</LinearLayout>